Improved web component a bit and changed an SQL statement in TodayFinancialSystem